# Sys2Bench

./: .gitignore  README.md  check.sh  pyproject.toml  requirements.txt  setup.sh  setup_wsl.sh  sys2bench.sh  sys2bench.yaml  update_inference_files.py
data/binpacking/: train.csv
data/blocksworld/: AutoHD_val_set.json
data/calendarplan/: output_num_days_1.bak.json  output_num_days_1.json  output_num_days_2.json  output_num_days_3.json  output_num_days_4.json  output_num_days_5.json  output_num_people_2.json  output_num_people_3.json  output_num_people_4.json  output_num_people_5.json  output_num_people_6.json  output_num_people_7.json
data/cube/: cube_train_subset.csv
data/game24/: val-autohd.csv
data/hotpotQA/: data.json
data/strategyqa/: strategyqa_test.json
data/tripplan/: test_TripPlan-cities-3.json  test_TripPlan-cities-4.json  test_TripPlan-cities-5.json  test_TripPlan-cities-6.json  test_TripPlan-cities-7.json  test_TripPlan-cities-8.json  test_TripPlan-cities-9.json
examples/: aws_bedrock_example.py
methods/: README.md
methods/AutoHD/: README.md
prompts/aqua/: prompts.json
prompts/binpacking/: prompts.json
prompts/blocksworld/: o1_prompt.json  pool_prompt_v2_step_2.json  pool_prompt_v2_step_4.json
prompts/calendarplan/: prompts.json
prompts/cube/: prompts.json
prompts/game24/: prompts.json  prompts.py
prompts/gsm8k/: prompts.json
prompts/hotpotQA/: prompts.json
prompts/prontoqa/: o1_prompt.json
prompts/strategyqa/: prompts.json
prompts/tripplan/: prompts.json  prompts.py
reasoners/: base.py
reasoners/lm/: __init__.py  (+7 more)
(+194 files in other folders)
